basic verion of tool is up. (manual set only)

--- a/EqUiWebUi/Views/Classification/ClassificationTool.cshtml
+++ b/EqUiWebUi/Views/Classification/ClassificationTool.cshtml
@@ -21,7 +21,6 @@
                         @Html.LabelFor(model => model.c_logClassSystem_id, "c_logClassSystem_id", htmlAttributes: new { @class = "control-label col-md-4" })
                         <div class="col-md-8">
                             @Html.DropDownList("c_logClassSystem_id", null, htmlAttributes: new { @class = "form-control" })
-                            @Html.ValidationMessageFor(model => model.c_logClassSystem_id, "", new { @class = "text-danger" })
                         </div>
                     </div>
 
@@ -29,7 +28,6 @@
                         @Html.LabelFor(model => model.coderangeStart, htmlAttributes: new { @class = "control-label col-md-4" })
                         <div class="col-md-8">
                             @Html.EditorFor(model => model.coderangeStart, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.coderangeStart, "", new { @class = "text-danger" })
                         </div>
                     </div>
 
@@ -37,7 +35,6 @@
                         @Html.LabelFor(model => model.coderangeEnd, htmlAttributes: new { @class = "control-label col-md-4" })
                         <div class="col-md-8">
                             @Html.EditorFor(model => model.coderangeEnd, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.coderangeEnd, "", new { @class = "text-danger" })
                         </div>
                     </div>
 
@@ -45,7 +42,6 @@
                         @Html.LabelFor(model => model.textSearch, htmlAttributes: new { @class = "control-label col-md-4" })
                         <div class="col-md-8">
                             @Html.EditorFor(model => model.textSearch, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.textSearch, "", new { @class = "text-danger" })
                         </div>
                     </div>
 
@@ -62,7 +58,7 @@
             <div class="card">
                 <div class="card-header bg-danger">
                     <h5 class="card-title text-white">
-                        Power functions
+                        Power functions(DANGEROUS)
                         <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-rotate-180 fa-1"></i></span>
                     </h5>
                 </div>
@@ -71,12 +67,14 @@
                         <div class="form-group">
                             <div class="col-md-offset-2 col-md-10">
                                 <button class="btn btn-success" id="btnSetALLClassSubgroup">Set</button>
+                                Set al that match current Query result
                             </div>
                         </div>
 
                         <div class="form-group">
                             <div class="col-md-offset-2 col-md-10">
                                 <button class="btn btn-danger" id="btnClearALLClassSubgroup">Clear</button>
+                                CELAR al that match current Query result
                             </div>
                         </div>
 
@@ -98,14 +96,12 @@
                         @Html.LabelFor(model => model.c_ClassificationId, "c_ClassificationId", htmlAttributes: new { @class = "control-label col-md-4" })
                         <div class="col-md-10">
                             @Html.DropDownList("c_ClassificationId", null, htmlAttributes: new { @class = "form-control" }, optionLabel: "--Select class--")
-                            @Html.ValidationMessageFor(model => model.c_ClassificationId, "", new { @class = "text-danger" })
                         </div>
                     </div>
                     <div class="form-group">
                         @Html.LabelFor(model => model.c_SubgroupId, "c_SubgroupId", htmlAttributes: new { @class = "control-label col-md-4" })
                         <div class="col-md-10">
                             @Html.DropDownList("c_SubgroupId", null, htmlAttributes: new { @class = "form-control" }, optionLabel: "--Select subgroup--")
-                            @Html.ValidationMessageFor(model => model.c_SubgroupId, "", new { @class = "text-danger" })
                         </div>
                     </div>
                     <div class="form-group">
@@ -168,12 +164,14 @@
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <button class="btn btn-success" id="btnSetSingleClassSubgroup">Set</button>
+                Set single row
             </div>
         </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <button class="btn btn-danger" id="btnClearSingleClassSubgroup">Clear</button>
+                Clear single row
             </div>
         </div>
 
@@ -222,12 +220,12 @@
                 //listen toclick events
                     //set a single Row
                     $('#btnSetSingleClassSubgroup').click(function () {
-                        SetClass(row.id, false);
+                        SetClass(data.id, false);
                     });
 
                     //Clear a single Row
                     $('#btnClearSingleClassSubgroup').click(function () {
-                        SetClass(row.id, true);
+                        SetClass(data.id, true);
                     });
                 //
                 },
@@ -303,7 +301,7 @@
                 },
                 error: function (result) {
                     console.log(result);
-                    $.toaster({ title: 'SetClass', priority: 'danger', message: result.error });
+                    $.toaster({ title: 'SetClass', priority: 'danger', message: result.statusCode });
                     //reload the grid
                     GetGridSearch(false);
                 }
@@ -313,12 +311,12 @@
     //listen toclick events
     //set a single Row
     $('#btnSetALLClassSubgroup').click(function () {
-        SetClass(null, false);
+        SetClass(0, false);
     });
 
     //Clear a single Row
     $('#btnClearALLClassSubgroup').click(function () {
-        SetClass(null, true);
+        SetClass(0, true);
     });
 
     //refresh grids system changes
