Implementing run rule

--- a/EqUiWebUi/Views/Tableau/Index.cshtml
+++ b/EqUiWebUi/Views/Tableau/Index.cshtml
@@ -104,7 +104,7 @@
     <div class="card">
         <div class="card-header bg-dark">
             <h5 class="card-title text-white">
-                Asset managemen
+                Asset management
                 <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
             </h5>
         </div>
@@ -132,7 +132,7 @@
 <div class="card">
     <div class="card-header bg-dark">
         <h5 class="card-title text-white">
-            Tipdress NGA
+            Tipdress NGAC
             <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
         </h5>
     </div>
@@ -150,7 +150,7 @@
         </p>
 
         <p>
-            <a href="~/tableau/EmbeddedDesktop?workbook=TipDressStuff&sheet=DressFaults" class="btn btn-primary btn-sm">Wear/dress &raquo;</a>
+            <a href="~/tableau/EmbeddedDesktop?workbook=TipDressStuff&sheet=DressFaults" class="btn btn-primary btn-sm">DressFaults &raquo;</a>
             Boommap met dressproblemen per fout type
         </p>
 
