--- a/EqUiWebUi/Views/Classification/_logSearchResult.cshtml
+++ b/EqUiWebUi/Views/Classification/_logSearchResult.cshtml
@@ -7,7 +7,7 @@
     columns.Add(c => c.text).Titled("Text");
     columns.Add(c => c.c_Classification.Classification).Titled("Class");
     columns.Add(c => c.c_Subgroup.Subgroup).Titled("Subgroup");
-}).Filterable().Sortable().Pageable(pager =>
+}).Sortable().Pageable(pager =>
 {
     pager.RowsPerPage = 10;
 }).Empty("Did not find anything").Css("table-hover")
