Added controller for logclassSystem. Starting test on STO system

--- a/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/Index.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/Index.cshtml
@@ -19,7 +19,7 @@
             </p>
             <p>
                 <a href="~/Tiplife/NgacElectrode/TipwearBeforeChange" class="btn btn-primary btn-sm">Tipwear before change &raquo;</a>
-                (Weergave van giswisselde electrodes en hun wear.)
+                (Weergave van geswisselde electrodes en hun wear.)
             </p>
             <p>
                 <a href="~/Tiplife/NgacElectrode/TipDressData?DataGrid-ErrorType-Contains=Max%20wear%20reached&DataGrid-Rows=20" class="btn btn-warning btn-sm">Max wear reached &raquo;</a>
