--- a/EqUiWebUi/Views/Tableau/Index.cshtml
+++ b/EqUiWebUi/Views/Tableau/Index.cshtml
@@ -72,7 +72,7 @@
             </p>
 
             <p>
-                <a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbedded_breakdowns&sheet=ObjectTree" class="btn btn-primary btn-sm">ObjectTree &raquo;</a>
+                <a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbedded_breakdowns&sheet=ObjectTreeDash" class="btn btn-primary btn-sm">ObjectTree &raquo;</a>
                 Boommap met aantal storingen
             </p>
 
