--- a/EqUiWebUi/Views/c_logClassSystem/Index.cshtml
+++ b/EqUiWebUi/Views/c_logClassSystem/Index.cshtml
@@ -19,3 +19,14 @@
     pager.RowsPerPage = 10;
 }).Empty("Did not find anything").Css("table-hover")
 
+
+
+<div class="card">
+    <div class="card card-title bg-primary">
+
+    </div>
+    <div class="card card-body">
+
+
+    </div>
+</div>
