--- a/EqUiWebUi/Areas/Alert/Views/L_controlLimits/Index.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/L_controlLimits/Index.cshtml
@@ -24,7 +24,7 @@
     columns.Add(c => c)
                     .Titled("")
                     .Encoded(false)
-                    .RenderedAs(c => MyFilters.IconActionLink(Url.Action("Edit", new { id = c.id }), "glyphicon glyphicon-pencil", "", "Edit this controllimit")
+                    .RenderedAs(c => MyFilters.IconActionLink(Url.Action("Edit", new { id = c.id }), "fas fa-pencil-alt", "", "Edit this controllimit")
                     ).Filterable(false);
 
 }).Filterable().Sortable().Pageable(pager =>
