basic chart functionallity up

--- a/EqUiWebUi/Areas/Alert/Views/ControlChart/GetControlChart.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/ControlChart/GetControlChart.cshtml
@@ -5,4 +5,10 @@
 
 <h2>ControlChart</h2>
 
-@Html.Partial("_GetControlChart")
+@Html.Action("_GetControlChart",new {
+    chartname = "testchart",
+    scaleLabel = "<%=value%> mm",
+    alarmobject = "35200R01_gun1",
+    c_trigger_id = 22
+
+})
