--- a/EqUiWebUi/Areas/Alert/Views/Alert/_Details.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/Alert/_Details.cshtml
@@ -52,6 +52,47 @@
         </div>
     </div>
 
+    @if (Model.c_triggers.hasControlLimits)
+    {
+        <hr />
+
+        @Html.Action("_GetControlChart", "Controlchart", new
+        {
+            chartname = "testchart", //need to get this from c_trigger
+            scaleLabel = "<%=value%> mm", //need to get this from c_trigger
+            alarmobject = Model.alarmobject,
+            c_trigger_id = Model.c_triggers.id
+            //need to set daterange to something logical for the alert.
+            //a closed alert -30 days before and 3 days after close.
+            //an active one 30 days before until now
+
+        })
+
+        <hr />
+
+        <div class="card">
+            <div class="card-header bg-light">
+                <h6 class="card-title">
+                    Controllimits for alarmobject:
+                    <strong>@Model.alarmobject.Trim()</strong> c_trigger_id:
+                    <strong>@Model.c_tirgger_id</strong>
+                    <span class="clickable float-right text-black-50"><i class="fas fa-chevron-circle-up fa-1"></i></span>
+                </h6>
+            </div>
+
+            <div class="card-body">
+                @Html.Action("_list", "L_controlLimits", new
+                {
+                    alarmobject = Model.alarmobject,
+                    c_trigger_id = Model.c_tirgger_id,
+                    showIsDead = true //show history for control limit
+                })
+            </div>
+        </div>
+
+        <hr />
+    }
+
     <div class="form-group">
         @Html.LabelFor(model => model.comments, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
