--- a/EqUiWebUi/Areas/Alert/Views/c_triggers/Edit.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/c_triggers/Edit.cshtml
@@ -99,11 +99,9 @@ else
                 <div class="form-group">
                     @Html.LabelFor(model => model.Animation, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        <div class="checkbox">
-                            @Html.EditorFor(model => model.Animation)
-                            @Html.ValidationMessageFor(model => model.Animation, "", new { @class = "text-danger" })
-                            @Html.HelpTextFor(model => model.Animation)
-                        </div>
+                        @Html.EditorFor(model => model.Animation, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Animation, "", new { @class = "text-danger" })
+                        @Html.HelpTextFor(model => model.Animation)
                     </div>
                 </div>
 
@@ -269,6 +267,15 @@ else
                         <div class="col-md-10">
                             <button id="checkcontrolChartSqlStatement" type="button" class="btn-sm btn-primary">Check controlChart Statement</button>
                         </div>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    @Html.LabelFor(model => model.controlChartYlabel, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.controlChartYlabel, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.controlChartYlabel, "", new { @class = "text-danger" })
+                        @Html.HelpTextFor(model => model.controlChartYlabel)
                     </div>
                 </div>
 
